@@ -121,8 +121,7 @@ def main(args=None):
     bucket.store('s3ql_seq_no_%d' % param['seq_no'], 'Empty')
 
     log.info('Uploading metadata...')
-    with bucket.open_write('s3ql_metadata', param) as fh:
-        dump_metadata(fh, db)  
+    bucket.perform_write(lambda fh: dump_metadata(fh, db) , "s3ql_metadata", param) 
     pickle.dump(param, open(cachepath + '.params', 'wb'), 2)
 
 
